--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
 
     location /api/ {
-        proxy_pass http://api-service:3000/api/;   # Proxy al servicio local
-        proxy_set_header Host $host;
+        proxy_pass https://examen-tp.onrender.com/api/;   # Proxy al servicio local
+        proxy_set_header Host examen-tp.onrender.com;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
